Fix resource icon API when reading files outside classpath.