@@ -1,17 +1,16 @@
 package nl.fairspace.pluto.web;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.concurrent.TimeUnit;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
 import org.springframework.http.CacheControl;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.concurrent.TimeUnit;
 
 import static nl.fairspace.pluto.config.Urls.ICONS_PATH;
 
@@ -36,7 +35,7 @@ public class IconsResource {
             }
             return ResponseEntity.ok()
                     .cacheControl(CacheControl.maxAge(30, TimeUnit.DAYS).cachePrivate())
-                    .body(IOUtils.toByteArray(in));
+                    .body(in.readAllBytes());
         } catch (IOException e) {
             log.error("Error reading image", e);
             return ResponseEntity.notFound().build();
